[package]
name = "learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"
actix-web = "3"
serde = "1"
serde_json = "1"
serde_with = { version = "1.11", features = ["hex"] }
num-bigint = "0.4"
kv = "0.22"

[[bin]]
name = "learn"
path = "src/main.rs"
