[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.0"
actix-web = "3"
serde = "1"
serde_json = "1"
serde_with = { version = "1.11", features = ["hex"] }
num-bigint = "0.4"
kv = { version = "0.22", features = ["json-value"] }
p256 = { version = "0.10.1", features = ["serde"] }
rand_core = "0.6.3"
ripemd = "0.1.0"
bs58 = "0.4.0"
hex = "0.4.3"

[[bin]]
name = "blockchain-rust"
path = "src/main.rs"
